--- a/src/components/GearCard/GearCard.css
+++ b/src/components/GearCard/GearCard.css
@@ -4,8 +4,6 @@
 	color: black;
 	font-size: 12px;
 	width: 270px;
-	float: right;
-	margin-left: 10px;
     border-radius: 10px;
 }
 
@@ -61,7 +59,7 @@
 	flex-basis: 60%;
 }
 
-.gear .gear-stats {
+.gear .gear-stats-container {
 	bottom: 0%;
     display: flex;
     flex-direction: column;
