--- a/src/components/utils/utils.css
+++ b/src/components/utils/utils.css
@@ -30,3 +30,31 @@
 .icon .Armor {
     padding-top: 5%;
 }
+
+.secret-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: black;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    font-size: 24px;
+    cursor: pointer;
+    z-index: 500;
+    border-radius: 10px;
+  }
+
+  .secret-toggle {
+    position: absolute;
+    bottom: 1%;
+    right: 40%;
+    width: 100%;
+    height: 100%;
+    color: white;
+    z-index: 1000;
+  }
