--- a/src/components/GearCard/GearCard.css
+++ b/src/components/GearCard/GearCard.css
@@ -70,9 +70,13 @@
     display: flex;
     flex-direction: column;
     top: 0%;
-    flex: 1;
+    flex: 25;
     row-gap: 8px;
     justify-content: center;
+}
+
+.gear-stats-container:empty {
+    flex: 10;
 }
 
 .gear .gear-stats-left {
@@ -104,7 +108,7 @@
 	text-align: center;
 	text-wrap: balance;
 	padding: 0 10px;
-	flex: 3;
+	flex: 80 50;
     display: flex;
     justify-content: flex-end;
 	flex-direction: column;
