--- a/src/components/utils/utils.css
+++ b/src/components/utils/utils.css
@@ -1,10 +1,11 @@
 .tooltip {
-    background-color: rgb(59, 59, 59);
+    background-color: rgb(70, 61, 61);
     padding: 10px;
     border-radius: 5px;
     border: 5px solid white;
     color: white;
     text-align: left;
+    z-index: 50;
 }
 
 .tooltip-title {
@@ -47,9 +48,9 @@
     cursor: pointer;
     z-index: 500;
     border-radius: 10px;
-  }
+}
 
-  .secret-toggle {
+.secret-toggle {
     position: absolute;
     bottom: 1%;
     right: 40%;
@@ -57,4 +58,4 @@
     height: 100%;
     color: white;
     z-index: 1000;
-  }
+}
