--- a/src/components/ArgonautCard/ArgonautCard.css
+++ b/src/components/ArgonautCard/ArgonautCard.css
@@ -1,6 +1,8 @@
 /* argonautbox template */
 .argonaut {
 	background-color: #EEE;
+	display: flex;
+	min-height: 140px;
 }
 
 .argonaut p {
@@ -10,17 +12,16 @@
 .argonaut-title {
 	text-align: center;
 	font-size: 18px;
-	color: #000;
-    border-radius: 9px 9px 0 0;
+	color: #FFF;
 	flex: 8;
+	background-color: #000;
+	padding-top: 5px;
 }
 
 .argonaut-card {
-	position: relative;
-	min-height: 140px;
-	display: flex;
-    flex-direction: column;
     text-align: center;
+	align-self: flex-end;
+	width: 100%
 }
 
 .argonaut-flavor {
@@ -32,8 +33,20 @@
 	width: 100%;
 	display: flex;
 	column-gap: 10px;
-	justify-content: center;
-	align-items: center;
+	background-color: #000;
+	color:#FFF;
+}
+
+.argonaut-info svg {
+	height: 20px;
+	width: 200px;
+	align-self: center;
+	display: block;
+	margin: auto;
+}
+
+.bottom-row {
+    border-radius: 0 0 9px 9px;
 }
 
 .argonaut-info-header {
