--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -92,6 +92,16 @@ button:focus-visible {
   z-index: 1;
 }
 
+.standard {
+  color: black;
+  font-size: 12px;
+  width: 326px;
+  height: 100%;
+  border-radius: 10px;
+  position: relative;
+  z-index: 1;
+}
+
 .data-tippy-root {
   z-index: 99999;
 }
