--- a/src/components/PatternCard/PatternCard.css
+++ b/src/components/PatternCard/PatternCard.css
@@ -114,7 +114,7 @@
 	align-items: center;
 }
 
-.gate .invertible, .pattern-ability-gate .invertible, .pattern-gated-ability .invertible, .icon .invertible, .kratos-option .invertible {
+.gate .invertible, .pattern-ability-gate .invertible, .pattern .invertible, .icon .invertible, .kratos-option .invertible {
 	filter: invert(1);
 }
 
@@ -144,8 +144,20 @@
 .kratos-row {
     flex: 4;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
+    height: 100%;
+    
+}
+
+.kratos-row::before {
+    content: "";
+    position: absolute;
+    width: 75%;
+    height: 8%;
+    background-color: #FFF; /* Change to desired color */
+    clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%); /* Diamond shape */
+    z-index: -1;
 }
 
 .kratos-option {
@@ -153,9 +165,9 @@
     color: white;
     margin: 1px;
     border-radius: 3px;
-    min-width: 10%;
+    min-width: 22%;
     display: flex;
-    height: 90%;
+    height: 95%;
     justify-content: center;
     align-items: center;
     padding: 2px;
