--- a/src/styles/homepage.css
+++ b/src/styles/homepage.css
@@ -11,6 +11,11 @@
   background-size: 40%;
 }
 
+.home-page h1 {
+  display: flex;
+  flex-direction: column;
+}
+
 .main-nav {
   list-style-type: none;
   margin: 0;
