--- a/src/components/cardtypes/FatedMnemosCard/FatedMnemosCard.css
+++ b/src/components/cardtypes/FatedMnemosCard/FatedMnemosCard.css
@@ -74,7 +74,7 @@
 }
 
 .fated-mnemos-effect-header {
-  background-color: #114ac6;
+  background-color: #066097;
 	color: white;
   width: fit-content;
   padding: 2px 10px;
@@ -85,6 +85,18 @@
   padding: 2px 10px;
   line-height: 15px;
   text-align: center;
+}
+
+.fated-mnemos-growth-title {
+	background-color: #066097;
+	text-align: center;
+	font-size: 14px;
+	color: #FFF;
+	padding: 4px 0;
+	border-top-left-radius: 15px;
+	border-top-right-radius: 15px;
+  max-height: fit-content;
+	margin: 5px 0;
 }
 
 /* End fated-mnemos template */
