--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -72,7 +72,8 @@ button:focus-visible {
   border: 1px dashed white;
   font-size: 10px;
   height: 15px;
-  width: 60px;
+  width: fit-content;
+  padding: 0 5px;
   position: absolute;
   bottom: -7px;
   right: 10px;
