--- a/src/styles/cardsStyle.css
+++ b/src/styles/cardsStyle.css
@@ -1,28 +1,17 @@
 .mini-american {
-  font-size: 12px;
   width: 270px;
-  height: 100%;
-  border-radius: 10px;
-  position: relative;
-  z-index: 1;
-  box-sizing: border-box;
-  overflow: hidden;
 }
 
-.standard {
-  font-size: 12px;
+.standard, .tarot {
   width: 326.4px;
-  height: 100%;
-  border-radius: 10px;
-  position: relative;
-  z-index: 1;
-  box-sizing: border-box;
-  overflow: hidden;
 }
 
 .half-page {
-  font-size: 12px;
   width: 834px;
+}
+
+.card {
+  font-size: 12px;
   height: 100%;
   border-radius: 10px;
   position: relative;
@@ -31,7 +20,7 @@
   overflow: hidden;
 }
 
-.fullcard p {
+.card p {
   margin: 0;
 }
 
